--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 bon = "3.7.2"
 clap = { version = "4.5.47", features = ["derive"] }
 handlebars = "6.3.2"
+html-escape = "0.2.13"
+regex = "1.11.2"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 
